Finished the two helper activities that would help the user select the appliance

--- a/res/layout/appliance_list_layout.xml
+++ b/res/layout/appliance_list_layout.xml
@@ -16,7 +16,7 @@
             android:text="@string/more_appliance_btn" />
 
         <ImageButton
-            android:id="@+id/imageButton1"
+            android:id="@+id/speak_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
